# fost-web

./: .gitignore  .travis.CMakeLists.txt  .travis.yml  CMakeLists.txt  ChangeLog  Jamroot  README.markdown  README.md  build  compile  compile.cmd
.circleci/: CMakeLists.txt  config.yml
Configuration/: CMakeLists.txt  Jamfile  log-show-all.json  mime-types.json  testrunner.json  testserver-d.unix.json  testserver-d.windows.json  testserver.json
Cpp/: CMakeLists.txt
Cpp/fost-rproxy/: CMakeLists.txt  Jamfile  cache-tests.cpp  cache.cpp  cache.db-tests.cpp  cache.db.cpp  cache.hash-tests.cpp  cache.hash.cpp  config-view-tests.cpp  config-view.cpp  config.cpp  fost-rproxy.cpp  fost-rproxy.hpp  proxy-lib.hpp  proxy-view-tests.cpp  proxy-view.cpp  stats.cpp
Cpp/fost-urlhandler/: CMakeLists.txt  Jamfile  config.cpp  control.exception.cpp  control.exception.tests.cpp  control.status-condition-tests.cpp  control.status-condition.cpp  file.cpp  fost-urlhandler.cpp  fost-urlhandler.hpp  fsigma.cpp  matcher.cpp  matcher.tests.cpp  middleware.logging.cpp  middleware.replace.cpp  middleware.replace.tests.cpp  middleware.request.cpp  middleware.template.cpp  mime-types.cpp  precondition.cpp  precondition.hpp  precondition.tests.cpp  responses.200.cpp  responses.301-tests.cpp  responses.301.cpp  responses.302-tests.cpp  responses.302.cpp  responses.303-tests.cpp  responses.303.cpp  responses.401.cpp  responses.403.cpp  responses.404.cpp  responses.405-tests.cpp  responses.405.cpp  responses.410.cpp  responses.412.cpp  responses.500.cpp  responses.501.cpp  responses.503.cpp  responses.cpp  (+18 more)
Cpp/fost-urlhandler-test/: CMakeLists.txt  web-proxy.cpp
Cpp/fost-webserver/: CMakeLists.txt  Jamfile  README.md  webserver.cpp
Cpp/fost-webserver-test/: CMakeLists.txt  testrunner.cpp
Cpp/fost-webtestrunner/: CMakeLists.txt  Jamfile  testrunner.cpp
Cpp/include/fost/: cache.hpp  config.hpp  http-cache.hpp  matcher.hpp  rproxy  stats.hpp  test-throw-view.hpp  urlhandler  urlhandler.hpp  views.hpp  web-proxy  web-proxy.hpp
Cpp/include/fost/detail/: exports.hpp
Cpp/include/proxy/: cache.hpp  libtext.hpp  proxy-lib  stats.hpp  views.hpp  webserver.hpp
Cpp/proxy-lib/: Jamfile  cache-tests.cpp  cache.cpp  cache.db-tests.cpp  cache.db.cpp  cache.hash-tests.cpp  cache.hash.cpp  config-view-tests.cpp  config.cpp  downloader.cpp  proxy-text-tests.cpp  proxy-text.cpp  proxy-view-tests.cpp  proxy-view.cpp  stats.cpp  uploader.cpp  webserver-tests.cpp  webserver.cpp
Cpp/rproxy/: Jamfile  config-view.cpp  downloader.cpp  proxy-lib.hpp  proxy-view-tests.cpp  webserver-tests.cpp  webserver.cpp
Cpp/urlhandler/: responses.cpp
Static/testserver/: Jamfile  default.css  index.html
Templates/testserver/: Jamfile  skin.html
fost-web/: compile
fost-web/Configuration/: mime-types.json
fost-web/Cpp/urlhandler/: Jamfile  mime-types.cpp  routing-tests.cpp
fost-web/Cpp/webserver/: webserver.cpp
kirit-com/: Jamroot  compile
kirit-com/Configuration/: mime-types.json  testserver.json
kirit-com/Cpp/include/: urlhandler.hpp
kirit-com/Cpp/urlhandler/: mime-types.cpp  responses.cpp  responses.static.cpp  routing-tests.cpp  routing.cpp  view.cpp
kirit-com/Cpp/webserver/: Jamfile  webserver.cpp
kirit-com/Static/testserver/: default.css  index.html
www-kirit-com/: Jamroot
www-kirit-com/Cpp/www-kirit-com/: Jamfile
